--- a/packages/client-sdk/package.json
+++ b/packages/client-sdk/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "@stakefy-x402/client-sdk",
-  "version": "0.1.0",
+  "name": "stakefy-x402-client",
+  "version": "1.0.0",
+  "description": "Client SDK for Stakefy x402 - 0.1% fee Solana payment facilitator",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "keywords": ["solana", "payment", "x402", "usdc", "stakefy", "crypto"],
+  "author": "JaspSoe",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JaspSoe/stakefy-x402.git",
+    "directory": "packages/client-sdk"
+  },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@solana/web3.js": "^1.87.6",
