--- a/packages/facilitator-api/package.json
+++ b/packages/facilitator-api/package.json
@@ -9,21 +9,22 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@solana/spl-token": "^0.3.9",
+    "@solana/web3.js": "^1.87.6",
+    "axios": "^1.13.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@solana/web3.js": "^1.87.6",
-    "@solana/spl-token": "^0.3.9",
+    "express": "^4.18.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.5",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
