--- a/packages/facilitator-api/package.json
+++ b/packages/facilitator-api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "qrcode": "^1.5.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
