--- a/packages/facilitator-api/package.json
+++ b/packages/facilitator-api/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "qrcode": "^1.5.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "x402": "^0.7.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
