--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,57 +1,71 @@
 {
   "name": "x402-stakefy-sdk",
-  "version": "1.0.6",
-  "description": "Feature-rich Solana x402 payment SDK with payment channels, @username system, session budgets, and merchant tools. Better than alternatives with 0.1% fees.",
+  "version": "2.1.1",
+  "description": "Complete Solana x402 payment infrastructure - Core SDK + React Hooks + Express Middleware",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "build": "tsup src/index.ts --format cjs,esm --dts --external react --external express --external @solana/wallet-adapter-react --external @solana/web3.js",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --external react --external express --external @solana/wallet-adapter-react --external @solana/web3.js --watch",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
     "solana",
     "x402",
     "payments",
-    "crypto",
-    "usdc",
-    "web3",
     "stakefy",
-    "blockchain",
-    "payment-gateway",
-    "payment-channels",
-    "session-budgets",
-    "username-payments",
-    "merchant-sdk",
-    "facilitator",
-    "solana-pay",
-    "qr-code",
-    "webhooks",
-    "typescript"
+    "web3",
+    "cryptocurrency",
+    "react",
+    "hooks",
+    "express",
+    "middleware",
+    "api",
+    "paywall"
   ],
   "author": "stakefyx402",
   "license": "MIT",
   "homepage": "https://github.com/JaspSoe/stakefy-x402#readme",
-  "bugs": {
-    "url": "https://github.com/JaspSoe/stakefy-x402/issues"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JaspSoe/stakefy-x402.git",
     "directory": "packages/core"
   },
+  "peerDependencies": {
+    "@solana/wallet-adapter-react": "^0.15.0",
+    "@solana/web3.js": "^1.95.0",
+    "express": "^4.18.0 || ^5.0.0",
+    "react": "^18.0.0 || ^19.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "express": {
+      "optional": true
+    },
+    "@solana/wallet-adapter-react": {
+      "optional": true
+    },
+    "@solana/web3.js": {
+      "optional": true
+    }
+  },
   "dependencies": {
-    "@solana/web3.js": "^1.95.8",
-    "@solana/spl-token": "^0.4.9",
+    "@solana/spl-token": "^0.4.14",
+    "x402-stakefy-sdk": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/web3.js": "^1.95.8",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "express": "^4.19.2",
+    "react": "^18.3.1",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
