feat: Add React Paywall + SessionBudget components
New package: stakefy-x402-components@0.1.0

Features:
- ✅ <Paywall> component with localStorage receipts
- ✅ <SessionBudget> component with budget tracking
- ✅ Auto-unlock without real payments (demo mode)
- ✅ Automatic buyer headers
- ✅ forcepay query param support
- ✅ Next.js example app included

This makes Stakefy a full x402 facilitator with instant
auto-unlock for client-side paywalls!

Components:
- Paywall: Lock/unlock content with demo payments
- SessionBudget: Track spending limits in localStorage
- createBuyer: Core buyer utilities
- fetch402: Enhanced fetch with x402 support

--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "eslint": "^9.39.0",
+    "tsup": "^8.5.0",
     "turbo": "^2.6.0",
-    "typescript": "^5.9.3"
-  }
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.6"
+  },
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ]
 }
