--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "next-app",
+  "name": "stakefy-x402-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@stakefy/x402": "file:../../packages/x402",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "x402-stakefy-sdk": "^2.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
