--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "x402-stakefy-sdk",
-  "version": "2.3.2",
-  "description": "Complete Solana x402 payment infrastructure - Core SDK + React Hooks + Express Middleware",
+  "version": "2.4.0",
+  "description": "The most feature-rich x402 payment SDK for Solana - 10x lower fees (0.1%), social payments, session budgets, payment channels, React hooks, and Express middleware",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,26 +11,47 @@
     "prepublishOnly": "npm run build"
   },
   "keywords": [
-    "solana",
     "x402",
+    "solana",
     "payments",
     "stakefy",
     "web3",
-    "cryptocurrency",
-    "react",
-    "hooks",
-    "express",
-    "middleware",
-    "api",
-    "paywall"
+    "crypto",
+    "usdc",
+    "stablecoin",
+    "payment-sdk",
+    "solana-pay",
+    "react-hooks",
+    "express-middleware",
+    "payment-gateway",
+    "micropayments",
+    "blockchain",
+    "defi",
+    "paywall",
+    "subscription",
+    "recurring-payments",
+    "session-budget",
+    "payment-channel",
+    "social-payments",
+    "ai-payments",
+    "agent-payments",
+    "402-protocol",
+    "http-402",
+    "pay-per-use",
+    "api-monetization",
+    "typescript"
   ],
-  "author": "stakefyx402",
+  "author": "Stakefy Team <sayhello@stakefy.io>",
   "license": "MIT",
   "homepage": "https://github.com/JaspSoe/stakefy-x402#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JaspSoe/stakefy-x402.git",
     "directory": "packages/core"
+  },
+  "bugs": {
+    "url": "https://github.com/JaspSoe/stakefy-x402/issues",
+    "email": "sayhello@stakefy.io"
   },
   "peerDependencies": {
     "@solana/wallet-adapter-react": "^0.15.0",
