--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stakefy-express",
-  "version": "1.0.2",
-  "description": "Express middleware for Stakefy x402 payments - Add paywalls in 3 lines",
+  "version": "2.0.0",
+  "description": "Express middleware for Stakefy x402 - Drop-in paywalls with 10x lower fees than competitors",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,16 +11,23 @@
     "prepublishOnly": "npm run build"
   },
   "keywords": [
+    "x402",
     "express",
     "middleware",
     "solana",
-    "x402",
     "payments",
     "stakefy",
     "paywall",
-    "api"
+    "api",
+    "web3",
+    "crypto",
+    "usdc",
+    "api-monetization",
+    "session-budget",
+    "payment-gateway",
+    "typescript"
   ],
-  "author": "stakefyx402",
+  "author": "Stakefy Team <sayhello@stakefy.io>",
   "license": "MIT",
   "homepage": "https://github.com/JaspSoe/stakefy-x402#readme",
   "repository": {
@@ -28,11 +35,15 @@
     "url": "git+https://github.com/JaspSoe/stakefy-x402.git",
     "directory": "packages/express"
   },
+  "bugs": {
+    "url": "https://github.com/JaspSoe/stakefy-x402/issues",
+    "email": "sayhello@stakefy.io"
+  },
   "peerDependencies": {
     "express": "^4.18.0 || ^5.0.0"
   },
   "dependencies": {
-    "x402-stakefy-sdk": "^1.0.5"
+    "x402-stakefy-sdk": "^2.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
