--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "x402-stakefy-react",
-  "version": "1.0.2",
-  "description": "React hooks for Stakefy x402 payments - Better than PayAI",
+  "version": "2.0.0",
+  "description": "React hooks and components for Stakefy x402 - 10x lower fees than competitors, social payments, session budgets",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,15 +11,24 @@
     "prepublishOnly": "npm run build"
   },
   "keywords": [
+    "x402",
     "react",
     "hooks",
     "solana",
-    "x402",
     "payments",
     "stakefy",
-    "web3"
+    "web3",
+    "crypto",
+    "usdc",
+    "payment-sdk",
+    "react-hooks",
+    "components",
+    "paywall",
+    "session-budget",
+    "social-payments",
+    "typescript"
   ],
-  "author": "stakefyx402",
+  "author": "Stakefy Team <sayhello@stakefy.io>",
   "license": "MIT",
   "homepage": "https://github.com/JaspSoe/stakefy-x402#readme",
   "repository": {
@@ -27,13 +36,17 @@
     "url": "git+https://github.com/JaspSoe/stakefy-x402.git",
     "directory": "packages/react"
   },
+  "bugs": {
+    "url": "https://github.com/JaspSoe/stakefy-x402/issues",
+    "email": "sayhello@stakefy.io"
+  },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "@solana/wallet-adapter-react": "^0.15.0",
     "@solana/web3.js": "^1.95.0"
   },
   "dependencies": {
-    "x402-stakefy-sdk": "^1.0.5"
+    "x402-stakefy-sdk": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
